Clear return value of closures to zero when an exception occures

For return types other than void, set the ffi closure return argument
to 0 when a Python exception occures. This a good default in general
but also has the side affect of fixing failing idle callbacks
by causing them to be removed from main loops (after their stack
is printed).

https://bugzilla.gnome.org/show_bug.cgi?id=702552